<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:orientation="vertical"
    android:weightSum="100">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_booking"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toBottomOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:background="@android:color/white"
        android:clickable="true"

        app:layout_constraintTop_toBottomOf="@+id/toolbar_booking"
        tools:context="com.ish.roomie.details.BookingFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/view_margin_medium"
                android:layout_marginTop="@dimen/view_margin_medium"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginLeft="@dimen/view_margin_large"
                        android:layout_marginStart="@dimen/view_margin_large"
                        android:layout_marginTop="@dimen/view_margin_medium"
                        android:fontFamily="sans-serif"
                        android:text="@string/title_booking_details"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/view_margin_large"
                        android:layout_marginStart="@dimen/view_margin_large">

                        <EditText
                            android:id="@+id/booking_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_booking_title"
                            android:inputType="textPersonName"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/view_margin_large"
                        android:layout_marginStart="@dimen/view_margin_large">

                        <EditText
                            android:id="@+id/booking_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_booking_desc"
                            android:inputType="textPersonName"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/details_equipments_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/choose_your_time"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <com.ish.timebar.TimeBar
                        android:id="@+id/booking_timebar"
                        android:layout_width="match_parent"
                        android:minHeight="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/view_margin_xlarge"
                        android:layout_marginTop="@dimen/view_margin_xlarge"
                        app:endtTime="19:00"
                        app:startTime="07:00"
                        app:thumbEnabled="true"
                        app:tickCount="12" />


                </LinearLayout>
            </android.support.v7.widget.CardView>


            <LinearLayout
                android:id="@+id/add_attendee_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <include layout="@layout/attendee_details_layout" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <android.support.v7.widget.CardView
        android:id="@+id/booking_confirm_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_attendee_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_margin="@dimen/view_margin_medium"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/add"
            android:textColor="@color/darkBlue" />

        <Button
            android:id="@+id/booking_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_margin="@dimen/view_margin_medium"
            android:background="@color/darkBlue"
            android:text="@string/confirm"
            android:textColor="@android:color/white" />

    </android.support.v7.widget.CardView>


</LinearLayout>