<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/search_default_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <TextView
            android:id="@+id/toolbar_date_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-thin"
            android:padding="@dimen/edittext_padding_medium"
            android:text="@string/title_showing_room"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/toolbar_date_subtitle"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/toolbar_date_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:drawableLeft="@drawable/ic_date_range"
            android:fontFamily="sans-serif-thin"
            android:gravity="center_vertical"
            android:padding="@dimen/edittext_padding_medium"
            android:text="@string/message_room_today"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textStyle="bold"
            android:textColor="@color/mediumGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            android:drawablePadding="@dimen/view_margin_small"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_date_header" />

        <ImageView
            android:id="@+id/search_ImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_black"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.889"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/search_icon_margin"
        android:background="@drawable/edittext_box_background"
        android:visibility="gone">

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/hint_search_room_by_name"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/edittext_padding_medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textCursorDrawable="@drawable/cursor_background"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/search_cancel_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <Button
            android:id="@+id/search_cancel_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:text="@android:string/cancel"
            android:textColor="?android:textColorHint"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>