<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ish.roomie.home.HomeFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_home"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toBottomOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <include layout="@layout/toolbar_home" />

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:id="@+id/filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:cardElevation="@dimen/view_margin_small"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_home">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/add_filter_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/filter_default_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:src="@drawable/ic_filter_list"
                android:layout_marginStart="@dimen/view_margin_medium"
                android:layout_marginLeft="@dimen/view_margin_medium"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"/>

            <TextView
                android:id="@+id/filter_default_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="@dimen/view_margin_medium"
                android:layout_marginTop="@dimen/view_margin_medium"
                android:fontFamily="sans-serif-thin"
                android:text="@string/message_add_filters"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/filter_default_imageview"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/filter_default_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="@dimen/view_margin_medium"
                android:fontFamily="sans-serif-thin"
                android:text="@string/message_filter_choose"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/filter_default_imageview"
                app:layout_constraintTop_toBottomOf="@id/filter_default_header" />

            <TextView
                android:id="@+id/filter_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:padding="@dimen/view_margin_medium"
                android:text="@string/add"
                android:background="@null"
                android:textColor="@color/darkBlue"
                android:textStyle="normal"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.875"
                app:layout_constraintStart_toEndOf="@+id/filter_default_message"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.504" />

        </android.support.constraint.ConstraintLayout>

        <com.ish.roomie.viewutils.tagview.TagView
            android:id="@+id/tag_home_filters"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_margin="@dimen/view_margin_medium"
            />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/room_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/filter_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/view_margin_medium"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        tools:listitem="@layout/fragment_room_list_item" />

</android.support.constraint.ConstraintLayout>
